argocd/manifests/network-policies/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: simple-webserver
spec:
  podSelector:
    matchLabels:
      app: simple-webserver
  policyTypes:
    - Egress
    - Ingress
